--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "framer-motion": "^2.3.0",
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.5.1",
+    "node-sass": "^4.14.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "sass": "^1.26.10",
+    "styled-jsx-plugin-sass": "^1.0.0",
     "swr": "^0.3.0"
   }
 }
