--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "9.5.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-particles-js": "^3.3.0",
     "sass": "^1.26.10",
     "swr": "^0.3.0"
   }
