--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@google-cloud/language": "^4.1.0",
     "framer-motion": "^2.3.0",
+    "googleapis": "^59.0.0",
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.5.1",
     "react": "16.13.1",
