--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^2.3.0",
     "googleapis": "^59.0.0",
     "isomorphic-unfetch": "^3.0.0",
+    "mongodb": "^3.6.2",
     "next": "9.5.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
